--- a/src/app/course/disciplines/disciplines.component.html
+++ b/src/app/course/disciplines/disciplines.component.html
@@ -1,14 +1,24 @@
-<table mat-table [dataSource]="disciplines" class="mat-elevation-z8">
-  <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef> Name </th>
-    <td mat-cell *matCellDef="let  discipline"> {{ discipline.name }} </td>
-  </ng-container>
+<div class="m-5">
+  <mat-toolbar color="primary">
+    <span>Availables disciplines</span>
+  </mat-toolbar>
 
-  <ng-container matColumnDef="category">
-    <th mat-header-cell *matHeaderCellDef> category </th>
-    <td mat-cell *matCellDef="let discipline"> {{discipline.category}} </td>
-  </ng-container>
+  <mat-card>
+    <table mat-table [dataSource]="disciplines" class="mat-elevation-z8">
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef> Name </th>
+        <td mat-cell *matCellDef="let  discipline"> {{ discipline.name }} </td>
+      </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
+      <ng-container matColumnDef="category">
+        <th mat-header-cell *matHeaderCellDef> category </th>
+        <td mat-cell *matCellDef="let discipline"> {{discipline.category}} </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+
+  </mat-card>
+</div>
+
