--- a/src/app/course/disciplines/disciplines.component.html
+++ b/src/app/course/disciplines/disciplines.component.html
@@ -1,4 +1,4 @@
-<div class="m-5">
+<div class="m-5" *ngIf="disciplines$ | async as disciplines; else loading">
   <mat-toolbar color="primary">
     <span>Availables disciplines</span>
   </mat-toolbar>
@@ -6,19 +6,26 @@
   <mat-card>
     <table mat-table [dataSource]="disciplines" class="mat-elevation-z8">
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Name </th>
-        <td mat-cell *matCellDef="let  discipline"> {{ discipline.name }} </td>
+        <th mat-header-cell *matHeaderCellDef>Name</th>
+        <td mat-cell *matCellDef="let discipline">{{ discipline.name }}</td>
       </ng-container>
 
       <ng-container matColumnDef="category">
-        <th mat-header-cell *matHeaderCellDef> category </th>
-        <td mat-cell *matCellDef="let discipline"> {{discipline.category}} </td>
+        <th mat-header-cell *matHeaderCellDef>category</th>
+        <td mat-cell *matCellDef="let discipline">{{ discipline.category }}</td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
-
   </mat-card>
 </div>
+<ng-template #loading>
+  <div class="col-12 my-5">
+    <div class="d-flex justify-content-center loading-spinner">
+      <mat-spinner></mat-spinner>
+    </div>
+  </div>
+
+</ng-template>
 
