--- a/src/app/course/disciplines/disciplines.component.html
+++ b/src/app/course/disciplines/disciplines.component.html
@@ -7,12 +7,15 @@
     <table mat-table [dataSource]="disciplines" class="mat-elevation-z8">
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef>Name</th>
-        <td mat-cell *matCellDef="let discipline">{{ discipline.name }}</td>
+        <td mat-cell *matCellDef="let discipline">{{ discipline.name }}
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="category">
         <th mat-header-cell *matHeaderCellDef>category</th>
-        <td mat-cell *matCellDef="let discipline">{{ discipline.category }}</td>
+        <td mat-cell *matCellDef="let discipline">{{ discipline.category }}
+          <mat-icon aria-hidden="false" aria-label="Curse discipline">{{ discipline.category | discipline }}</mat-icon>
+        </td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
