--- a/src/app/course/disciplines/discipline-form/discipline-form.component.html
+++ b/src/app/course/disciplines/discipline-form/discipline-form.component.html
@@ -1,1 +1,30 @@
-<p>discipline-form works!</p>
+<mat-card class="m-5">
+  <mat-toolbar color="primary">Discipline actions</mat-toolbar>
+
+  <form [formGroup]="form">
+    <div class="row">
+      <mat-form-field appearance="fill" class="col-12">
+        <input matInput placeholder="name" formControlName="name">
+      </mat-form-field>
+
+      <mat-form-field appearance="fill" class="col-12">
+        <mat-label>Category</mat-label>
+        <mat-select  formControlName="category">
+          <mat-option value="null"></mat-option>
+          <mat-option value="math">Math</mat-option>
+          <mat-option value="physics">Physics</mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+
+    <div class="d-flex justify-content-center">
+      <mat-card-actions>
+        <button mat-raised-button color="primary" class="mx-1" (click)="onSubmit()">Submit</button>
+        <button mat-raised-button (click)="onCancel()">Cancel</button>
+      </mat-card-actions>
+    </div>
+  </form>
+</mat-card>
+
+
+
