--- a/src/app/course/disciplines/disciplines.component.html
+++ b/src/app/course/disciplines/disciplines.component.html
@@ -26,13 +26,13 @@
       </ng-container>
 
       <ng-container matColumnDef="actions">
-        <mat-header-cell *matHeaderCellDef>
+        <mat-header-cell *matHeaderCellDef  class="mt-3">
           <button mat-mini-fab color="primary" aria-label="Add discipline" (click)="onAdd()">
             <mat-icon >add</mat-icon>
           </button>
         </mat-header-cell>
 
-        <mat-cell *matCellDef="let discipline">
+        <mat-cell *matCellDef="let discipline" class="mt-1">
           <button mat-icon-button color="primary" aria-label="Edit discipline">
             <mat-icon>edit</mat-icon>
           </button>
